Add additional api stubs for affiliates
