# indexer/services/comlink/public/swagger.json
@@ -253,6 +253,98 @@
         "type": "object",
         "additionalProperties": false
       },
+      "AffiliateAddressResponse": {
+        "properties": {
+          "address": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "required": [
+          "address"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "AffiliateSnapshotResponseObject": {
+        "properties": {
+          "affiliateAddress": {
+            "type": "string"
+          },
+          "affiliateEarnings": {
+            "type": "number",
+            "format": "double"
+          },
+          "affiliateReferralCode": {
+            "type": "string"
+          },
+          "affiliateReferredTrades": {
+            "type": "number",
+            "format": "double"
+          },
+          "affiliateTotalReferredFees": {
+            "type": "number",
+            "format": "double"
+          },
+          "affiliateReferredUsers": {
+            "type": "number",
+            "format": "double"
+          },
+          "affiliateReferredNetProtocolEarnings": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "required": [
+          "affiliateAddress",
+          "affiliateEarnings",
+          "affiliateReferralCode",
+          "affiliateReferredTrades",
+          "affiliateTotalReferredFees",
+          "affiliateReferredUsers",
+          "affiliateReferredNetProtocolEarnings"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "AffiliateSnapshotResponse": {
+        "properties": {
+          "affiliateList": {
+            "items": {
+              "$ref": "#/components/schemas/AffiliateSnapshotResponseObject"
+            },
+            "type": "array"
+          },
+          "total": {
+            "type": "number",
+            "format": "double"
+          },
+          "currentOffset": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "required": [
+          "affiliateList",
+          "total",
+          "currentOffset"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
+      "AffiliateTotalVolumeResponse": {
+        "properties": {
+          "totalVolume": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "required": [
+          "totalVolume"
+        ],
+        "type": "object",
+        "additionalProperties": false
+      },
       "AssetPositionResponse": {
         "properties": {
           "positions": {
@@ -1543,6 +1635,108 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/AffiliateReferralCodeResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "address",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/affiliates/address": {
+      "get": {
+        "operationId": "GetAddress",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AffiliateAddressResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "referralCode",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
+    "/affiliates/snapshot": {
+      "get": {
+        "operationId": "GetSnapshot",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AffiliateSnapshotResponse"
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "offset",
+            "required": false,
+            "schema": {
+              "format": "double",
+              "type": "number"
+            }
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "required": false,
+            "schema": {
+              "format": "double",
+              "type": "number"
+            }
+          },
+          {
+            "in": "query",
+            "name": "sortByReferredFees",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ]
+      }
+    },
+    "/affiliates/total_volume": {
+      "get": {
+        "operationId": "GetTotalVolume",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AffiliateTotalVolumeResponse"
                 }
               }
             }
