# indexer/services/comlink/src/controllers/api/v4/affiliates-controller.ts
@@ -9,23 +9,93 @@ import { getReqRateLimiter } from '../../../caches/rate-limiters';
 import config from '../../../config';
 import { handleControllerError } from '../../../lib/helpers';
 import { rateLimiterMiddleware } from '../../../lib/rate-limit';
+import { handleValidationErrors } from '../../../request-helpers/error-handler';
 import ExportResponseCodeStats from '../../../request-helpers/export-response-code-stats';
-import { AffiliateReferralCodeRequest, AffiliateReferralCodeResponse } from '../../../types';
+import {
+  AffiliateAddressRequest,
+  AffiliateReferralCodeRequest,
+  AffiliateReferralCodeResponse,
+  AffiliateAddressResponse,
+  AffiliateSnapshotResponse,
+  AffiliateSnapshotResponseObject,
+  AffiliateSnapshotRequest,
+  AffiliateTotalVolumeResponse,
+  AffiliateTotalVolumeRequest,
+} from '../../../types';
 
 const router: express.Router = express.Router();
 const controllerName: string = 'affiliates-controller';
 
+// TODO(OTE-731): replace api stubs with real logic
 @Route('affiliates')
 class AffiliatesController extends Controller {
   @Get('/referral_code')
   async getReferralCode(
     @Query() address: string, // eslint-disable-line @typescript-eslint/no-unused-vars
   ): Promise<AffiliateReferralCodeResponse> {
-    // TODO: OTE-731 replace apit stubs with real logic
     // simulate a delay
     await new Promise((resolve) => setTimeout(resolve, 100));
     return {
       referralCode: 'TempCode123',
+    };
+  }
+
+  @Get('/address')
+  async getAddress(
+    @Query() referralCode: string, // eslint-disable-line @typescript-eslint/no-unused-vars
+  ): Promise<AffiliateAddressResponse> {
+    // simulate a delay
+    await new Promise((resolve) => setTimeout(resolve, 100));
+    return {
+      address: 'some_address',
+    };
+  }
+
+  @Get('/snapshot')
+  async getSnapshot(
+    @Query() offset ?: number,
+      @Query() limit ?: number,
+      @Query() sortByReferredFees ?: boolean,
+  ): Promise<AffiliateSnapshotResponse> {
+    const finalOffset = offset ?? 0;
+    const finalLimit = limit ?? 1000;
+    const finalSortByReferredFees = sortByReferredFees ?? false; // eslint-disable-line max-len, @typescript-eslint/no-unused-vars
+
+    // simulate a delay
+    await new Promise((resolve) => setTimeout(resolve, 100));
+
+    const snapshot: AffiliateSnapshotResponseObject = {
+      affiliateAddress: 'some_address',
+      affiliateEarnings: 100,
+      affiliateReferralCode: 'TempCode123',
+      affiliateReferredTrades: 1000,
+      affiliateTotalReferredFees: 100,
+      affiliateReferredUsers: 10,
+      affiliateReferredNetProtocolEarnings: 1000,
+    };
+
+    const affiliateSnapshots: AffiliateSnapshotResponseObject[] = [];
+    for (let i = 0; i < finalLimit; i++) {
+      affiliateSnapshots.push(snapshot);
+    }
+
+    const response: AffiliateSnapshotResponse = {
+      affiliateList: affiliateSnapshots,
+      total: finalLimit,
+      currentOffset: finalOffset,
+    };
+
+    return response;
+  }
+
+  @Get('/total_volume')
+  public async getTotalVolume(
+    @Query() address: string, // eslint-disable-line @typescript-eslint/no-unused-vars
+  ): Promise<AffiliateTotalVolumeResponse> {
+    // simulate a delay
+    await new Promise((resolve) => setTimeout(resolve, 100));
+    return {
+      totalVolume: 111.1,
     };
   }
 }
@@ -40,6 +110,7 @@ router.get(
       errorMessage: 'address must be a valid string',
     },
   }),
+  handleValidationErrors,
   ExportResponseCodeStats({ controllerName }),
   async (req: express.Request, res: express.Response) => {
     const start: number = Date.now();
@@ -62,6 +133,144 @@ router.get(
     } finally {
       stats.timing(
         `${config.SERVICE_NAME}.${controllerName}.get_referral_code.timing`,
+        Date.now() - start,
+      );
+    }
+  },
+);
+
+router.get(
+  '/address',
+  rateLimiterMiddleware(getReqRateLimiter),
+  ...checkSchema({
+    referralCode: {
+      in: ['query'],
+      isString: true,
+      errorMessage: 'referralCode must be a valid string',
+    },
+  }),
+  handleValidationErrors,
+  ExportResponseCodeStats({ controllerName }),
+  async (req: express.Request, res: express.Response) => {
+    const start: number = Date.now();
+    const {
+      referralCode,
+    }: AffiliateAddressRequest = matchedData(req) as AffiliateAddressRequest;
+
+    try {
+      const controller: AffiliatesController = new AffiliatesController();
+      const response: AffiliateAddressResponse = await controller.getAddress(referralCode);
+      return res.send(response);
+    } catch (error) {
+      return handleControllerError(
+        'AffiliatesController GET /address',
+        'Affiliates address error',
+        error,
+        req,
+        res,
+      );
+    } finally {
+      stats.timing(
+        `${config.SERVICE_NAME}.${controllerName}.get_address.timing`,
+        Date.now() - start,
+      );
+    }
+  },
+);
+
+router.get(
+  '/snapshot',
+  rateLimiterMiddleware(getReqRateLimiter),
+  ...checkSchema({
+    offset: {
+      in: ['query'],
+      isInt: true,
+      toInt: true,
+      optional: true,
+      errorMessage: 'offset must be a valid integer',
+    },
+    limit: {
+      in: ['query'],
+      isInt: true,
+      toInt: true,
+      optional: true,
+      errorMessage: 'limit must be a valid integer',
+    },
+    sortByReferredFees: {
+      in: ['query'],
+      isBoolean: true,
+      toBoolean: true,
+      optional: true,
+      errorMessage: 'sortByReferredFees must be a boolean',
+    },
+  }),
+  handleValidationErrors,
+  ExportResponseCodeStats({ controllerName }),
+  async (req: express.Request, res: express.Response) => {
+    const start: number = Date.now();
+    const {
+      offset,
+      limit,
+      sortByReferredFees,
+    }: AffiliateSnapshotRequest = matchedData(req) as AffiliateSnapshotRequest;
+
+    try {
+      const controller: AffiliatesController = new AffiliatesController();
+      const response: AffiliateSnapshotResponse = await controller.getSnapshot(
+        offset,
+        limit,
+        sortByReferredFees,
+      );
+      return res.send(response);
+    } catch (error) {
+      return handleControllerError(
+        'AffiliatesController GET /snapshot',
+        'Affiliates snapshot error',
+        error,
+        req,
+        res,
+      );
+    } finally {
+      stats.timing(
+        `${config.SERVICE_NAME}.${controllerName}.get_snapshot.timing`,
+        Date.now() - start,
+      );
+    }
+  },
+);
+
+router.get(
+  '/total_volume',
+  rateLimiterMiddleware(getReqRateLimiter),
+  ...checkSchema({
+    address: {
+      in: ['query'],
+      isString: true,
+      errorMessage: 'address must be a valid string',
+    },
+  }),
+  ExportResponseCodeStats({ controllerName }),
+  async (req: express.Request, res: express.Response) => {
+    const start: number = Date.now();
+    const {
+      address,
+    }: AffiliateTotalVolumeRequest = matchedData(req) as AffiliateTotalVolumeRequest;
+
+    try {
+      const controller: AffiliatesController = new AffiliatesController();
+      const response: AffiliateTotalVolumeResponse = await controller.getTotalVolume(address);
+      return res.send(response);
+    } catch (error) {
+      return handleControllerError(
+        'AffiliateTotalVolumeResponse GET /total_volume',
+        'Affiliate total volume error',
+        error,
+        req,
+        res,
+      );
+    } finally {
+      stats.timing(
+        `${config.SERVICE_NAME}.${controllerName}.get_total_volume.timing`,
         Date.now() - start,
       );
     }
